--- a/server-centos/Dockerfile
+++ b/server-centos/Dockerfile
@@ -2,10 +2,14 @@
 FROM centos:7
 MAINTAINER billypon
 
-RUN useradd -s /sbin/nologin -d /dev/null -M www -r -u 997
+RUN useradd -s /sbin/nologin -d /dev/null -M www -r -u 997 -g 997
 RUN cp -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN ln -s service /sbin/start
+RUN ln -s service /sbin/stop
+RUN ln -s service /sbin/restart
+RUN ln -s service /sbin/status
 
-RUN yum install -y epel-release
+RUN yum install -y epel-release sudo
 RUN yum install -y make gcc
 
 # php
@@ -50,4 +54,4 @@ RUN yum autoremove -y make gcc php-devel
 RUN yum autoremove -y
 RUN yum clean all
 
-CMD /sbin/main
+ENTRYPOINT ["/sbin/main"]
