--- a/git-sync/Dockerfile
+++ b/git-sync/Dockerfile
@@ -2,16 +2,17 @@
 FROM centos:7
 MAINTAINER billypon
 
-RUN yum install -y git crontabs
-
-# cron
-RUN touch /var/log/cron.log
-
-# system
+# init
 RUN cp -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+
+# install
+RUN yum install -y git crontabs
 
 # clean
 RUN yum autoremove -y
 RUN yum clean all
+
+# cron
+RUN touch /var/log/cron.log
 
 CMD crond && tail -f /var/log/cron.log
