update git-sync: add localtime

--- a/git-sync/Dockerfile
+++ b/git-sync/Dockerfile
@@ -1,8 +1,10 @@
 FROM alpine:3.5
 MAINTAINER billypon
 
+ADD localtime /etc/localtime
 RUN apk add --no-cache openssh-client git
 ADD git-sync /bin/
 
+WORKDIR /home/git
 VOLUME ["/home/git"]
-CMD ["/bin/git-sync", "-dc"]
+CMD ["git-sync", "-dc"]
