--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -2,7 +2,8 @@ FROM alpine:3.5
 MAINTAINER billypon
 
 RUN apk add --no-cache syncthing && \
-    ln -s /home/syncthing/.config /root/.config/syncthing
+	mkdir -p ~/.config && \
+    ln -s /home/syncthing/.config ~/.config/syncthing
 
 WORKDIR /home/syncthing
 EXPOSE 8384 22000 21027/udp
