--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -1,8 +1,9 @@
 FROM alpine:3.5
 MAINTAINER billypon
 
+ADD localtime /etc/localtime
 RUN apk add --no-cache syncthing && \
-	mkdir -p ~/.config && \
+    mkdir -p ~/.config && \
     ln -s /home/syncthing/.config ~/.config/syncthing
 
 WORKDIR /home/syncthing
