update syncthing && git-sync

--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -9,4 +9,4 @@ RUN apk add --no-cache syncthing && \
 WORKDIR /home/syncthing
 EXPOSE 8384 22000 21027/udp
 VOLUME ["/home/syncthing"]
-CMD ["syncthing"]
+ENTRYPOINT ["syncthing", "-logflags=3"]
