update syncthing && git-sync: use billypon/alpine instead of alpine

--- a/git-sync/Dockerfile
+++ b/git-sync/Dockerfile
@@ -1,7 +1,6 @@
-FROM alpine:3.5
+FROM billypon/alpine:3.5
 MAINTAINER billypon
 
-ADD localtime /etc/localtime
 RUN apk add --no-cache openssh-client git
 ADD git-sync /bin/
 
