--- a/syncthing/Dockerfile
+++ b/syncthing/Dockerfile
@@ -1,7 +1,6 @@
-FROM alpine:3.5
+FROM billypon/alpine:3.5
 MAINTAINER billypon
 
-ADD localtime /etc/localtime
 RUN apk add --no-cache syncthing && \
     mkdir -p ~/.config && \
     ln -s /home/syncthing/.config ~/.config/syncthing
