--- a/shadowsocks/Dockerfile
+++ b/shadowsocks/Dockerfile
@@ -4,4 +4,4 @@ MAINTAINER billypon
 ADD localtime /etc/localtime
 RUN pip install shadowsocks
 
-CMD ["ssserver", "-k", "$password"]
+CMD ssserver -k $password
