--- a/virtualhere/Dockerfile
+++ b/virtualhere/Dockerfile
@@ -1,6 +1,7 @@
 FROM alpine:3.7
 MAINTAINER billypon
 
+ADD vhusbd /usr/sbin/
 ADD config.ini /etc/virtualhere/
 ADD on* /etc/virtualhere/
 
@@ -8,4 +9,4 @@ RUN wget http://www.virtualhere.com/sites/default/files/usbserver/vhusbdx86_64 -
     chmod +x /usr/sbin/vhusbdx86_64
 
 EXPOSE 7575
-CMD ["vhusbdx86_64", "-c", "/etc/virtualhere/config.ini"]
+CMD ["vhusbd"]
