--- a/php/7.1.1-fpm/Dockerfile
+++ b/php/7.1.1-fpm/Dockerfile
@@ -5,13 +5,16 @@ RUN apk add --no-cache \
         libintl icu-libs libmcrypt libbz2 libpng libjpeg-turbo libwebp freetype \
         gettext-dev icu-dev libmcrypt-dev zlib-dev bzip2-dev \
         libpng-dev libjpeg-turbo-dev libwebp-dev freetype-dev \
+		openldap openldap-dev \
 
     && docker-php-ext-configure gd --with-jpeg-dir=/usr/include --with-webp-dir=/usr/include --with-freetype-dir=usr/include \
+    && docker-php-ext-configure ldap \
     && pecl bundle -d /usr/src/php/ext redis \
-    && docker-php-ext-install bcmath bz2 calendar exif gd gettext intl mcrypt mysqli pdo_mysql pcntl sockets zip redis \
+    && docker-php-ext-install bcmath bz2 calendar exif gd gettext intl mcrypt mysqli pdo_mysql pcntl sockets zip redis ldap \
 
     && apk del \
         gettext-dev icu-dev libmcrypt-dev zlib-dev bzip2-dev \
         libpng-dev libjpeg-turbo-dev libwebp-dev freetype-dev \
+		openldap-dev \
     
     && rm -rf /tmp/pear/cache
