--- a/certbot/1.16.0/Dockerfile
+++ b/certbot/1.16.0/Dockerfile
@@ -3,7 +3,9 @@ MAINTAINER billypon
 
 ADD certbot /certbot
 
-RUN apk add --no-cache grep curl jq
+RUN apk add --no-cache grep curl jq && \
+	ln -s /certbot/certonly /usr/local/bin && \
+	ln -s /dev/null /var/log/certbot
 
 WORKDIR /certbot
-ENTRYPOINT [ "/certbot/certbot" ]
+ENTRYPOINT [ "/certbot/entrypoint" ]
