--- a/php/7.4.9-fpm/Dockerfile
+++ b/php/7.4.9-fpm/Dockerfile
@@ -10,18 +10,22 @@ RUN apk add --no-cache \
         openssl \
         openldap openldap-dev \
         libgmpxx gmp-dev \
+        imagemagick imagemagick-libs libgomp imagemagick-dev \
 
     && docker-php-ext-configure gd --with-jpeg --with-webp --with-freetype \
     && docker-php-ext-configure ldap \
+    && pecl bundle -d /usr/src/php/ext apcu \
     && pecl bundle -d /usr/src/php/ext mcrypt \
     && pecl bundle -d /usr/src/php/ext redis \
-    && docker-php-ext-install bcmath bz2 calendar exif gd gettext intl mcrypt mysqli pdo_mysql pcntl sockets zip redis ldap opcache gmp \
+    && pecl bundle -d /usr/src/php/ext imagick \
+    && docker-php-ext-install bcmath bz2 calendar exif gd gettext intl mcrypt mysqli pdo_mysql pcntl sockets zip redis apcu opcache gmp imagick ldap \
 
     && apk del \
         gettext-dev icu-dev libmcrypt-dev libzip-dev zlib-dev bzip2-dev \
         libpng-dev libjpeg-turbo-dev libwebp-dev freetype-dev \
         openldap-dev \
         gmp-dev \
+        imagemagick-dev \
 
     && rm -rf /tmp/pear/cache \
 
